fix: badge wrap

--- a/Chorbar/wwwroot/static/chores.css
+++ b/Chorbar/wwwroot/static/chores.css
@@ -12,6 +12,7 @@
   color: var(--color-muted);
   font-weight: 700;
   font-size: var(--font-size-xs);
+  text-wrap: nowrap;
 
   &.emphasis {
     border: 1px solid var(--color-primary);
@@ -46,6 +47,7 @@
 #chores {
   --chore-height: 6rem;
   --max-chores-pr-row: 4;
+  --chore-width: 18rem;
 
   @media (max-width: 600px),
   (max-height: 600px) {
@@ -55,8 +57,8 @@
   display: grid;
   gap: var(--space-lg);
 
-  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
-  max-width: calc(var(--max-chores-pr-row) * 18rem + (var(--max-chores-pr-row) - 1) * var(--space-lg));
+  grid-template-columns: repeat(auto-fill, minmax(var(--chore-width), 1fr));
+  max-width: calc(var(--max-chores-pr-row) * var(--chore-width) + (var(--max-chores-pr-row) - 1) * var(--space-lg));
 
   grid-template-rows: repeat(auto-fill, minmax(var(--chore-height), 1fr));
   grid-auto-flow: dense;
